donate today incomplete

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800;900&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- top banner start -->
     <section class="banner top-bg">
         <div class="container">
             <div class="banner-wraper">
@@ -20,5 +21,24 @@
             </div>
         </div>
     </section>
+    <!-- top banner end -->
+
+    <!-- donate today start -->
+    <section class="banner">
+        <div class="container">
+            <h1>Donate Today</h1>
+            <p class="banner-para para-color">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, nisi consectetur eveniet atque ipsam, voluptas beatae harum.
+            </p>
+            <div class="donate-list">
+                <div><a href="#">100tk</a></div>
+                <div><a href="#" class="active-list">200tk</a></div>
+                <div><a href="#">500tk</a></div>
+                <div><a href="#">1000tk</a></div>
+                <div><a href="#">5000tk</a></div>
+            </div>
+        </div>
+    </section>
+    <!-- donate today end -->
 </body>
 </html>
