complete donate today section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                 <div><a href="#">1000tk</a></div>
                 <div><a href="#">5000tk</a></div>
             </div>
+            <div class="donate-input">
+                <input type="text" placeholder="Other Amount (Taka)">
+                <a class="link-btn" href="www.stripe.com"
+                 target="_blank">Donate Now</a>
+            </div>
+                
         </div>
     </section>
     <!-- donate today end -->
