our donate plan complete

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <!-- top banner start -->
     <section class="banner top-bg">
-        <div class="container">
+        <div id="container">
             <div class="banner-wraper">
                 <h1 class="top-heading">Let's Help Those Who Are More In Need</h1>
-                <p class="banner-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, nisi consectetur eveniet atque ipsam, voluptas beatae harum.</p>
+                <p class="banner-para">That don't lights. Blessed land spirit creature divide our made two itself upon you'll dominion waters man second good you they're divided upon winged were replenish night.</p>
                 <a class="link-btn" href="www.stripe.com" target="_blank">Donate Now</a>
             </div>
         </div>
@@ -25,10 +25,10 @@
 
     <!-- donate today start -->
     <section class="banner">
-        <div class="container">
+        <div id="container">
             <h1>Donate Today</h1>
             <p class="banner-para para-color">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, nisi consectetur eveniet atque ipsam, voluptas beatae harum.
+                We are nonprofit team and work worldwide
             </p>
             <div class="donate-list">
                 <div><a href="#">100tk</a></div>
@@ -46,5 +46,33 @@
         </div>
     </section>
     <!-- donate today end -->
+    
+    <!-- our donate plan start -->
+    <section class="banner">
+        <div id="container">
+            <h1>Our Donate Plan</h1>
+            <p class="banner-para para-color">
+                We wish you to live a happy life full of joy. A life in which you get a chance to impact many lives and when death knocks on your door
+            </p>
+            <div class="card-wrapper">
+                <div class="plan-card card1">
+                    <img src="images/icons/food.png" alt="food icon">
+                    <h3>Food For Every Family</h3>
+                    <p class="plan-para">Be tree their face won't appear day waters moved fourth in they're divide don't a you were man face god.</p>
+                </div>
+                <div class="plan-card card2">
+                    <img src="images/icons/shelter.png" alt="food icon">
+                    <h3>Shelter For Every Family</h3>
+                    <p class="plan-para">Be tree their face won't appear day waters moved fourth in they're divide don't a you were man face god.</p>
+                </div>
+                <div class="plan-card card3">
+                    <img src="images/icons/Frame-1.png" alt="food icon">
+                    <h3>Education For Every Child</h3>
+                    <p class="plan-para">Be tree their face won't appear day waters moved fourth in they're divide don't a you were man face god.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- our donate plan end -->
 </body>
 </html>
