--- a/index.html
+++ b/index.html
@@ -74,5 +74,12 @@
         </div>
     </section>
     <!-- our donate plan end -->
+
+    <!-- footer start -->
+    <footer>
+        <h2>Charity.</h2>
+        <p class="foot-para">So seed seed green that winged cattle in kath moved us land years living.</p>
+    </footer>
+    <!-- footer end -->
 </body>
 </html>
