--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
     </section>
     <!-- our donate plan end -->
 
+    <!-- volunteer start -->
+    <section class="banner volunteer-bg">
+        <div id="container">
+            <div class="banner-wraper">
+                <h1>Become a volunteer</h1>
+                <p class="banner-para v-para">So seed seed green that winged cattle in. Gathering thing made fly you're divided deep leave on the medicene moved us land years living.</p>
+                <a class="link-btn" href="www.stripe.com" target="_blank">Join With Us</a>
+            </div>
+        </div>
+    </section>
+    <!-- volunteer end -->
+
     <!-- footer start -->
     <footer>
         <h2>Charity.</h2>
