get update section complete

--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
     </section>
     <!-- volunteer end -->
 
+    <!-- get updates start -->
+    <section class="banner">
+        <div id="container">
+            <h1>Get Daily Updates</h1>
+            <p class="banner-para para-color">
+                Be tree their face won't appear day to waters moved fourth in they're divide don't a you're were man.
+            </p>
+            <div class="daily-update">
+                <form action="">
+                    <input type="email" placeholder="Email">
+                    <button class="btn">Subscribe</button>
+                </form>
+            </div>    
+        </div>
+    </section>
+    <!-- get updates end -->
+
     <!-- footer start -->
     <footer>
         <h2>Charity.</h2>
