full site published

--- a/index.html
+++ b/index.html
@@ -75,17 +75,28 @@
     </section>
     <!-- our donate plan end -->
 
-    <!-- volunteer start -->
-    <section class="banner volunteer-bg">
+    <!-- our latest events start -->
+    <section class="banner">
         <div id="container">
-            <div class="banner-wraper">
-                <h1>Become a volunteer</h1>
-                <p class="banner-para v-para">So seed seed green that winged cattle in. Gathering thing made fly you're divided deep leave on the medicene moved us land years living.</p>
-                <a class="link-btn" href="www.stripe.com" target="_blank">Join With Us</a>
+            <h1>Our Latest Events</h1>
+            <p class="banner-para para-color">
+                Be tree their face won't appear day to waters moved fourth in they're divide don't a you're were man.
+            </p>   
+            <div class="event-list">
+                <img class="list-items" src="images/donation2.jpg" alt="">
+                <img class="list-items" src="images/elyse-chia.jpg" alt="">
+                <img class="list-items" src="images/donation7.jpg" alt="">
+                <img class="list-items" src="images/larm-rmah.jpg" alt="">
+            </div>
+            <div class="event-list">
+                <img class="list-items" src="images/donation0.jpg" alt="">
+                <img class="list-items" src="images/donation1.jpg" alt="">
+                <img class="list-items" src="images/donation3.jpg" alt="">
+                <img class="list-items" src="images/donation4.jpg" alt="">
             </div>
         </div>
     </section>
-    <!-- volunteer end -->
+    <!-- our latest events end -->
 
     <!-- get updates start -->
     <section class="banner">
